# lazuli

./: .gitignore  Cargo.toml
.github/workflows/: deploy-web.yml
crates/app/src/: cli.rs  main.rs
crates/browser-renderer/: Cargo.toml
crates/browser-renderer/src/: lib.rs  packet.rs  tev.rs  web.rs
crates/clifwasm/: Cargo.toml
crates/clifwasm/src/: lib.rs
crates/cores/: Cargo.toml
crates/cubetool/src/: main.rs
crates/dspint/zayd-tests/: main.rs
crates/lazuli/memtest/: main.rs
crates/lazuli/src/: system.rs
crates/lazuli/src/system/: exi.rs
crates/ppcjit/: Cargo.toml
crates/ppcjit/src/: block.rs  builder.rs  hooks.rs  lib.rs  test.rs  translation_test.rs  unwind.rs
crates/ppcjit/src/builder/: arithmetic.rs  branch.rs  compare.rs  exception.rs  floating.rs  logic.rs  memory.rs  others.rs  util.rs
crates/ppcwasmjit/: Cargo.toml
crates/ppcwasmjit/examples/: browser_boot.rs  browser_disc_source.mjs  browser_dol.rs  dump_clif.rs
crates/ppcwasmjit/src/: browser_abi.rs  gx_fifo.rs  lib.rs  region.rs
crates/ppcwasmjit/tests/: dol_e2e.rs  dol_fixture.rs
crates/ppcwasmjit/tests/support/: dol_fixture.rs  mod.rs
tools/: browser_boot_audio.test.mjs  browser_boot_cache.test.mjs  browser_boot_checkpoint.mjs  browser_boot_checkpoint.test.mjs  browser_boot_checkpoint_compatibility.test.mjs  browser_boot_checkpoint_core.mjs  browser_boot_checkpoint_core.test.mjs  browser_boot_checkpoint_fixture.mjs  browser_boot_checkpoint_golden.test.mjs  browser_boot_checkpoint_v3.mjs  browser_boot_checkpoint_v3.test.mjs  browser_boot_checkpoint_v3_fixture.mjs  browser_boot_checkpoint_v3_manifest.test.mjs  browser_boot_compositor_capture.test.mjs  browser_boot_compositor_png.mjs  browser_boot_compositor_png.test.mjs  browser_boot_controller.test.mjs  browser_boot_cp.test.mjs  browser_boot_cp_fifo_decode.test.mjs  browser_boot_cp_fifo_transport.test.mjs  browser_boot_cp_interrupt_delivery.test.mjs  browser_boot_cp_interrupt_fixture.mjs  browser_boot_cp_interrupt_source.test.mjs  browser_boot_devtools_socket.mjs  browser_boot_devtools_socket.test.mjs  browser_boot_di.test.mjs  browser_boot_disc_identity.mjs  browser_boot_disc_identity.test.mjs  browser_boot_file_worker.test.mjs  browser_boot_gameplay_transcript.mjs  browser_boot_gameplay_transcript.test.mjs  browser_boot_gameplay_transcript_fixture.mjs  browser_boot_gx_clear.test.mjs  browser_boot_gx_fifo.test.mjs  browser_boot_gx_packet.test.mjs  browser_boot_gx_state.test.mjs  browser_boot_gx_transport_fixture.mjs  browser_boot_headless.mjs  browser_boot_headless.test.mjs  browser_boot_headless_cdp.mjs  (+52 more)
tools/compatibility/smb-usa/: memory-card.json  ready-play.json
web/: app.html  app.webmanifest  index.html  release.mjs  sw.js  sw.test.mjs  wrangler.toml
