[package]
name = "browser-renderer"
description = "Mandatory wgpu WebGPU presenter for the Lazuli browser runtime"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
bytemuck = { version = "1.22", features = ["derive"] }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["HtmlCanvasElement"] }
wgpu = { workspace = true, features = ["webgpu", "wgsl"] }
